# Bank_statement_analyzer

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  exceptions.py
app/models/: schemas.py
app/services/: analyzer.py  categorizer.py  detector.py  exporter.py  normalizer.py  ocr_parser.py  parser.py
app/templates/: dashboard.html  result_fragment.html  upload.html
app/utils/: logger.py
